--- a/index.html
+++ b/index.html
@@ -815,7 +815,7 @@
 <head>
     <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Alejandro Jaramillo</title>
+<title>Stiven Guerra</title>
 <link rel="preconnect" href="https://netlify-eleventy-api-img.netlify.app/">
 
 <link rel="preload" href="/v3/_fonts/PacaembuVar-subset.woff2" as="font" type="font/woff2" crossorigin="">
@@ -832,23 +832,23 @@
 <meta name="msapplication-config" content="/v3/static/favicon/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
 <meta name="description" content="A powerful serverless platform with an intuitive git-based workflow. Automated deployments, shareable previews, and much more. Get started for free!">
-<meta itemprop="name" content="Alejandro Jaramillo">
+<meta itemprop="name" content="Stiven Guerra">
 <meta itemprop="description" content="A powerful serverless platform with an intuitive git-based workflow. Automated deployments, shareable previews, and much more. Get started for free!">
 <meta itemprop="image" content="https://www.netlify.com/v3/static/og-image.png">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@netlify">
-<meta name="twitter:title" content="Alejandro Jaramillo">
+<meta name="twitter:title" content="Stiven Guerra">
 <meta name="twitter:description" content="A powerful serverless platform with an intuitive git-based workflow. Automated deployments, shareable previews, and much more. Get started for free!">
 <meta name="twitter:creator" content="@netlify">
 <meta name="twitter:image" content="https://www.netlify.com/v3/static/og-image.png">
 <meta name="og:image" content="https://www.netlify.com/v3/static/og-image.png">
 <meta name="og:image:secure_url" content="https://www.netlify.com/v3/static/og-image.png">
 <meta property="og:site_name" content="Netlify">
-<meta property="og:title" content="Alejandro Jaramillo">
+<meta property="og:title" content="Stiven Guerra">
 <meta property="og:description" content="A powerful serverless platform with an intuitive git-based workflow. Automated deployments, shareable previews, and much more. Get started for free!">
 	<meta property="og:image"
     content="https://i.ibb.co/Y2hpnW1/143086968-2856368904622192-1959732218791162458-n.png">
-	<title>Alejandro Jaramillo</title>
+	<title>Stiven Guerra</title>
 
     <meta name="viewport" content="user-scalable=no,initial-scale=1,maximum-scale=1" />
     <link href="https://z-m-static.xx.fbcdn.net/rsrc.php/v3/yj/r/gB76kJXPYJV.png" rel="shortcut icon" sizes="196x196" />
